# Todo-Integration-ML

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  app.py  celery_app.py  compose.yml  entrypoint.sh  http_client.py  logging_conf.py  ml_infer.py  predict_routes.py  pyproject.toml  pytest.ini  settings.py  task_fetch_users.py  todo_models.py  todo_routes.py  todo_service.py
.github/workflows/: ci.yml
run/: task_priority_model.joblib
src/: app.py  errors.py  logging_conf.py  ml_infer.py
src/api/v1/: auth_routes.py  predict_routes.py  todo_routes.py  user_routes.py
src/core/: celery_app.py  dependencies.py  security.py  settings.py
src/models/: auth_models.py  todo_models.py
src/services/: auth_service.py  todo_service.py  user_service.py
src/utils/: file_utils.py  http_client.py
src/workers/tasks/: task_fetch_users.py  task_train_model.py
tests/: conftest.py  test_auth.py  test_auth_register.py  test_auth_service.py  test_dependencies.py  test_ml_infer.py  test_predict.py  test_predict_errors.py  test_security.py  test_security_and_deps.py  test_service.py  test_tasks.py  test_tasks_router.py  test_user.py
