[project]
name = "todo-integration-ml"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "celery>=5.3",
  "redis>=5.0",
  "python-dotenv>=1.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.6",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "httpx>=0.27"            # <-- перенесено сюди
]

[project.optional-dependencies]
dev = [
  "black>=24.3",
  "isort>=5.13",
  "ruff>=0.5",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "types-redis>=4.6.0.20240906",
  "types-requests>=2.32.0.20240914"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
force_single_line = false
combine_as_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "Q", "W", "C4", "T20", "RET", "SIM", "RUF"]
ignore = ["D"]

[tool.ruff.lint.isort]
known-first-party = ["todo_integration_ml"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
pretty = true
show_error_codes = true
exclude = [
  "data/.*",
  "logs/.*",
  "docker/.*",
  ".venv/.*",
]

[tool.pytest.ini_options]
addopts = "-q --cov=./ --cov-report=term-missing --no-header"
testpaths = ["tests"]
xfail_strict = true
filterwarnings = [
  "error::DeprecationWarning",
  "ignore::UserWarning",
]
